--- a/style.css
+++ b/style.css
@@ -81,6 +81,30 @@ a:hover {
   border-radius: 0px 0px 5px 5px;
 }
 
+.about-title {
+  font-size: 40px;
+  margin-top: 15px;
+  margin-left: 15px;
+}
+
+.about-section-1, .about-section-2, .about-section-3 {
+  width: 100%;
+  height: 400px;
+  border-bottom: solid 2px #a1a1a1;
+}
+
+.about-section-1 {
+
+}
+
+.about-section-2 {
+
+}
+
+.about-section-3 {
+
+}
+
 
 /********** MEDIA QUERIES **********/
 /*Bootstrap xl 1200*/
@@ -124,8 +148,10 @@ a:hover {
     position: absolute;
     top: 27px;
     right: 27px;
+  }
 
-
+  .about-title {
+    font-size: 25px;
   }
 
 }
