--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .body {
   font-family: 'Josefin Sans', sans-serif;
+  min-width: 320px;
 }
 
 a {
@@ -14,6 +15,11 @@ a:hover {
 
 .mobile-navi {
   display: none;
+}
+
+.center {
+  margin: 0 auto;
+  width: 50%;
 }
 
 /********** HEADER *********/
@@ -83,14 +89,14 @@ a:hover {
 
 .about-title {
   font-size: 40px;
-  margin-top: 15px;
-  margin-left: 15px;
 }
 
 .about-section-1, .about-section-2, .about-section-3 {
   width: 100%;
-  height: 400px;
-  border-bottom: solid 2px #a1a1a1;
+  height: auto;
+  min-height: 400px;
+  padding: 15px;
+
 }
 
 .about-section-1 {
@@ -98,11 +104,46 @@ a:hover {
 }
 
 .about-section-2 {
+ background-color: #1d1814;
+ color: #ffffff;
 
 }
 
 .about-section-3 {
+  background-color: #f9a93f;
+  color: #ffffff;
 
+}
+
+
+.name-field, .question-field {
+  margin-top: 15px;
+  padding: 5px;
+  border: solid 1px #000000;
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+.question-field {
+  resize: none;
+  height: 70px;
+}
+
+.btn-container {
+  margin: 0 auto;
+  width: 75px;
+}
+
+.question-submit {
+  cursor: pointer;
+  background-color: #ffffff;
+  color: #f9a93f;
+  border: solid 1px #f9a93f;
+  border-radius: 5px;
+  margin-top: 30px;
+  width: 75px;
+  
 }
 
 
