--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ margin: 25px 0;
 .what-info {
 text-align: center;
 margin: 15px 0;
+font-size: 18px;
 }
 
 /********** Where *********/
@@ -234,6 +235,7 @@ margin: 15px 0;
  font-size: 20px;
 }
 
+/********** When *********/
 
 
 /********** Why *********/
@@ -378,11 +380,14 @@ margin: 15px 0;
     left: 150px;
   }
 
+/******** about-section *********/
+
   .about-title {
     font-size: 25px;
   }
 
   /******** how *********/
+
   .contact-link {
     font-size: 20px;
   }
