--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ a:hover {
   background-color: #1d1814;
   width: 100%;
   height: 120px;
-
   position: absolute;
   top: 0;
 }
@@ -54,17 +53,12 @@ a:hover {
   position: absolute;
   right: 15px;
   top: 40px;
+  text-transform: capitalize;
 }
 
 .navi-btn {
   display: inline-block;
   margin-left: 5px;
-}
-
-.navi-btn:hover {
-  transform: rotateX(360deg);
-  transition-duration: .8s
-
 }
 
 .header-a {
